# craftyverse-recsys

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: default.yaml
configs/train/: implicit_als.yaml
notebooks/: CF_cosine_sim_rec.ipynb  MF_rec.ipynb  data_cleaning.ipynb
src/recsys/: __init__.py  cli.py
src/recsys/recommendation/: MFRecommender.py  __init__.py  recommend.py
src/recsys/utils/: __init__.py  files.py
